Add admin username auth and refine mobile header/map interactions

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 # Admin Authentication
-# Set a secure password for admin access
+# Set admin credentials for admin access
+ADMIN_USERNAME=admin
 ADMIN_PASSWORD=your_secure_password_here
 
 # For Vercel deployment:
 # 1. Go to Project Settings > Environment Variables
-# 2. Add ADMIN_PASSWORD with your secure password
+# 2. Add ADMIN_USERNAME and ADMIN_PASSWORD
 # 3. Redeploy the application
