--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,12 @@
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=your_secure_password_here
 
+# Optional but recommended for Vercel production persistence.
+# Without KV, serverless file writes may fail and admin updates/alerts won't persist.
+KV_REST_API_URL=
+KV_REST_API_TOKEN=
+
 # For Vercel deployment:
 # 1. Go to Project Settings > Environment Variables
-# 2. Add ADMIN_USERNAME and ADMIN_PASSWORD
+# 2. Add ADMIN_USERNAME, ADMIN_PASSWORD, KV_REST_API_URL, KV_REST_API_TOKEN
 # 3. Redeploy the application
